[package]
name = "pyth-sdk-solana"
version = "0.4.2"
authors = ["Pyth Data Foundation"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://pyth.network"
repository = "https://github.com/pyth-network/pyth-sdk-rs"
description = "pyth price oracle data structures and example usage"
keywords = [ "pyth", "solana", "oracle" ]
readme = "README.md"

[dependencies]
borsh = "0.9"
borsh-derive = "0.9.0"
bytemuck = "1.7.2"
num-derive = "0.3"
num-traits = "0.2"
pyth-sdk = "0.4.2"
thiserror = "1.0"
serde = { version = "1.0.136", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]
