[package]
name = "pyth-sdk-solana"
version = "0.4.2"
authors = ["Pyth Data Foundation"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://pyth.network"
repository = "https://github.com/pyth-network/pyth-sdk-rs"
description = "pyth price oracle data structures and example usage"
keywords = [ "pyth", "solana", "oracle" ]
readme = "README.md"

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
bytemuck = "1.11.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
pyth-sdk = "0.4.2"
thiserror = "1.0.31"
serde = { version = "1.0.140", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]
