[package]
name = "pyth-sdk-solana"
version = "0.4.2"
authors = ["Pyth Data Foundation"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://pyth.network"
repository = "https://github.com/pyth-network/pyth-sdk-rs"
description = "pyth price oracle data structures and example usage"
keywords = [ "pyth", "solana", "oracle" ]
readme = "README.md"

[dependencies]
borsh.workspace = true
borsh-derive.workspace = true
bytemuck.workspace = true
num-derive.workspace = true
num-traits.workspace = true
pyth-sdk = "0.4.2"
thiserror.workspace = true
serde.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
