[package]
name = "token-bridge-paloma"
version = "0.1.0"
authors = ["Yuriy Savchenko <yuriy.savchenko@gmail.com>"]
edition = "2021"
description = "Wormhole token bridge"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = { version = "1.0.0" }
schemars.workspace = true
serde.workspace = true
cw20 = "0.13.4"
cw20-base = { version = "0.13.4", features = ["library"] }
cw20-wrapped-2 = { path = "../cw20-wrapped", features = ["library"] }
terraswap = "2.7.0"
wormhole-bridge-paloma = { path = "../wormhole", features = ["library"] }
thiserror.workspace = true
k256 = { version = "0.9.4", default-features = false, features = ["ecdsa"] }
sha3.workspace = true
generic-array = "0.14.5"
hex.workspace = true

[dev-dependencies]
serde_json.workspace = true
