[package]
name = "token-bridge-paloma"
version = "0.1.0"
authors = ["Yuriy Savchenko <yuriy.savchenko@gmail.com>"]
edition = "2021"
description = "Wormhole token bridge"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-storage.workspace = true
cw20.workspace = true
cw20-base.workspace = true
cw20-wrapped-2.workspace = true
generic-array.workspace = true
hex.workspace = true
k256.workspace = true
schemars.workspace = true
serde.workspace = true
sha3.workspace = true
terraswap.workspace = true
thiserror.workspace = true
wormhole-bridge-paloma = { path = "../wormhole", features = ["library"] }

[dev-dependencies]
serde_json.workspace = true
