[package]
name = "wormhole-bridge-paloma"
version = "0.1.0"
authors = ["Yuriy Savchenko <yuriy.savchenko@gmail.com>"]
edition = "2021"
description = "Wormhole contract"

[lib]
name = "wormhole"
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-storage.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
k256.workspace = true
getrandom.workspace = true
sha3.workspace = true
generic-array.workspace = true
hex.workspace = true

[dev-dependencies]
serde_json.workspace = true
